welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:4: error: not found: value estSurRouge
if(estSurRouge()) {x=="S" }
   ^Runner:5: error: type mismatch;
 found   : String
 required: Boolean
while(!estFaceMur||x!=="S") { avance();
                   ^