welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var x:String=""
baisseBrosse();
setCouleurBrosse(Color.pink);
if(estSurRouge()) {x=="S" }
while(!estFaceMur||x!=="S") { avance();
if(estFaceMur) { gauche();avance();}
}